<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/property_add_type_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">


            <TextView
                android:id="@+id/property_add_type_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/property_add_type_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_type"
                app:layout_constraintStart_toStartOf="@id/property_add_type"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/property_add_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_type_label" />


            <TextView
                android:id="@+id/property_add_price_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_price_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_price"
                app:layout_constraintStart_toStartOf="@id/property_add_price"
                app:layout_constraintTop_toBottomOf="@id/property_add_type" />

            <EditText
                android:id="@+id/property_add_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/property_add_size"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_price_label" />


            <TextView
                android:id="@+id/property_add_size_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_size_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_size"
                app:layout_constraintStart_toStartOf="@id/property_add_size"
                app:layout_constraintTop_toBottomOf="@id/property_add_type" />

            <EditText
                android:id="@+id/property_add_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/property_add_rooms"
                app:layout_constraintStart_toEndOf="@id/property_add_price"
                app:layout_constraintTop_toBottomOf="@id/property_add_size_label" />


            <TextView
                android:id="@+id/property_add_rooms_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_rooms_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_rooms"
                app:layout_constraintStart_toStartOf="@id/property_add_rooms"
                app:layout_constraintTop_toBottomOf="@id/property_add_type" />

            <EditText
                android:id="@+id/property_add_rooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/property_add_size"
                app:layout_constraintTop_toBottomOf="@id/property_add_price_label" />


            <TextView
                android:id="@+id/property_add_description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_description_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_description"
                app:layout_constraintStart_toStartOf="@id/property_add_description"
                app:layout_constraintTop_toBottomOf="@id/property_add_rooms" />

            <EditText
                android:id="@+id/property_add_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_description_label" />

            <TextView
                android:id="@+id/property_add_address_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_address_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_address"
                app:layout_constraintStart_toStartOf="@id/property_add_address"
                app:layout_constraintTop_toBottomOf="@id/property_add_description" />

            <EditText
                android:id="@+id/property_add_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_address_label" />

            <TextView
                android:id="@+id/property_add_status_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_status_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_status"
                app:layout_constraintStart_toStartOf="@id/property_add_status"
                app:layout_constraintTop_toBottomOf="@id/property_add_address" />

            <Spinner
                android:id="@+id/property_add_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_status_label" />

            <TextView
                android:id="@+id/property_add_seller_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_seller_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_seller"
                app:layout_constraintStart_toStartOf="@id/property_add_seller"
                app:layout_constraintTop_toBottomOf="@id/property_add_status" />

            <EditText
                android:id="@+id/property_add_seller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_seller_label" />

            <TextView
                android:id="@+id/property_add_school_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_school_label"
                app:layout_constraintStart_toStartOf="@id/property_add_seller"
                app:layout_constraintTop_toBottomOf="@id/property_add_seller" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/property_add_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/property_add_school_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/property_add_school_label" />

            <TextView
                android:id="@+id/property_add_market_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_market_label"
                app:layout_constraintStart_toStartOf="@id/property_add_seller"
                app:layout_constraintTop_toBottomOf="@id/property_add_school_label" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/property_add_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/property_add_market_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/property_add_market_label" />

            <TextView
                android:id="@+id/property_add_photos_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_photos_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_seller"
                app:layout_constraintStart_toStartOf="@id/property_add_seller"
                app:layout_constraintTop_toBottomOf="@id/property_add_market_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_property_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/property_add_photos_label"
                tools:itemCount="1"
                tools:listitem="@layout/activity_add_property_photos_item" />

            <Button
                android:id="@+id/property_add_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_property_recycler_view"
                android:layout_marginStart="16dp"
                android:text="@string/property_add_photo_button"/>

            <TextView
                android:id="@+id/property_add_date_added_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_date_added_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_date_added"
                app:layout_constraintStart_toStartOf="@id/property_add_date_added"
                app:layout_constraintTop_toBottomOf="@id/property_add_photo_button" />

            <EditText
                android:id="@+id/property_add_date_added"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_date_added_label" />

            <TextView
                android:id="@+id/property_add_date_sold_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/property_add_date_sold_label"
                app:layout_constraintEnd_toEndOf="@id/property_add_date_sold"
                app:layout_constraintStart_toStartOf="@id/property_add_date_sold"
                app:layout_constraintTop_toBottomOf="@id/property_add_date_added" />

            <EditText
                android:id="@+id/property_add_date_sold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/property_add_date_sold_label" />

            <Button
                android:id="@+id/property_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/property_add_date_sold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/property_add_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>