<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/search_title"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/search_price_minimum_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_price_minimum_label"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/search_price_maximum_label"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/search_price_maximum_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_price_maximum_label"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_price_minimum_label" />

            <EditText
                android:id="@+id/search_price_minimum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/search_price_maximum"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_price_minimum_label" />

            <EditText
                android:id="@+id/search_price_maximum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_price_minimum"
                app:layout_constraintTop_toBottomOf="@id/search_price_maximum_label" />

            <TextView
                android:id="@+id/search_size_minimum_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_size_minimum_label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/search_price_minimum"
                app:layout_constraintEnd_toStartOf="@id/search_size_maximum_label"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/search_size_maximum_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_size_maximum_label"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/search_price_maximum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_size_minimum_label" />

            <EditText
                android:id="@+id/search_size_minimum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/search_size_maximum"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_size_minimum_label" />

            <EditText
                android:id="@+id/search_size_maximum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_size_minimum"
                app:layout_constraintTop_toBottomOf="@id/search_size_maximum_label" />

            <TextView
                android:id="@+id/search_rooms_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_rooms_label"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_size_minimum" />

            <Spinner
                android:id="@+id/search_rooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_rooms_label" />

            <TextView
                android:id="@+id/search_type_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_type_label"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_rooms" />

            <Spinner
                android:id="@+id/search_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_type_label" />

            <TextView
                android:id="@+id/search_address_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_address_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_type" />

            <EditText
                android:id="@+id/search_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_address_label" />

            <TextView
                android:id="@+id/search_school_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_school_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_address" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/search_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/search_school_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_school_label" />

            <TextView
                android:id="@+id/search_market_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_market_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_school_label" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/search_market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/search_market_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_market_label" />

            <!--<TextView
                android:id="@+id/search_photos_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Nombre de photos"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_market_label" />

            <Spinner
                android:id="@+id/search_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_photos_label" />-->

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/search_market"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/search_button"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>